--- a/f/fl/fly/flytesofancy.co.uk.html
+++ b/f/fl/fly/flytesofancy.co.uk.html
@@ -1,72 +1,144 @@
-<!--The following is the downloaded HTML source of the flytesofancy.co.uk privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607210856id_/http%3A//www.flytesofancy.co.uk/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flytesofancy.co.uk privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207024659id_/http%3A//www.flytesofancy.co.uk/privacy_policy.htm) for the most accurate reproduction.-->
 
 <html><!-- InstanceBegin template="/Templates/mainpage.dwt" codeOutsideHTMLIsLocked="false" --><head>
-<meta name="keywords" content="Dovecotes, Bird Tables, Bird Boxes, Bird Box, Bird Feeders, Dog Kennels, Aviaries, Poultry Housing, Dorset, Pulham, Dorchester, Weymouth, Sherborne Doves, Birds, Nest Box, Henhouse, Hen House, Hen Housing, Chicken Arks, Rabbit Hutch, Pet Villas, Chickens, Cat Chalet, Duck Housing, Owl Boxes, Owl Box, Feeders, Bird Feeders">
+
+<meta name="keywords" content="Ark,Arks,Ark's,Aviaries,Bantam,Barn,Bird,Birds,Box,Boxes,Cats,Chalet,Chicken
+
+Chickens,Coop,Coops,Cottage,Dogs,Dorchester,Dorset,Dove,Dovecote,Dovecotes,Duck,Ducks
+
+Feeders,Food,Goose,Guinea,Handmade,Henhouse,Hens,Housing,Hutch,Hutchs,Kennel,Kingdom,Nest
+
+Nesting,Newton,Nuts,Nuts,Owl,Owls,Pets,Pig,Pigs,Plywood,Poultry,Pulham,Quail,Rabbit,Rabbits
+
+Redwood,Robin,Robins,RSPCB,Scandinavian,Seed,Seeds,South,Sparrow,Sturminster,Table,Tables,Tit
+
+Tits,UK,United,Villa,Villas,Waterfowl,Weymouth,Wood,Wooden">
+
 <meta name="description" content="Flyte so Fancy, a customer driven family run company making Dovecotes, Animal, Bird and Poultry housing to the highest standards.">
+
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Flyte so Fancy, Pulham, Dorset</title>
 <!-- InstanceEndEditable --> 
+
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
 <link href="flytesofancy.css" rel="stylesheet" type="text/css">
+
 <style type="text/css"> <!-- A:link {color:#006600; text-decoration: none} A:visited {color:#006600} A:hover {color:#990000} A:active {color:#990000} --> </style>
+
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
+
 </head>
+
 <body bgcolor="#b0ffb0" leftmargin="0" topmargin="0">
-<table width="100%" height="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+
+<table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
   <!-- fwtable fwsrc="FINALHOME2.png" fwbase="f_so_f.jpg" fwstyle="Dreamweaver" fwdocid = "742308039" fwnested="0" -->
   <tbody><tr> 
-    <td height="1"><img src="images/spacer.gif" width="7" height="1" border="0" alt=""></td>
+
+    <td><img src="images/spacer.gif" width="7" height="1" border="0" alt=""></td>
+
     <td><img src="images/spacer.gif" width="71" height="1" border="0" alt=""></td>
+
     <td><img src="images/spacer.gif" width="129" height="1" border="0" alt=""></td>
+
     <td><img src="images/spacer.gif" width="79" height="1" border="0" alt=""></td>
+
     <td><img src="images/spacer.gif" width="196" height="1" border="0" alt=""></td>
+
     <td><img src="images/spacer.gif" width="73" height="1" border="0" alt=""></td>
+
     <td><img src="images/spacer.gif" width="67" height="1" border="0" alt=""></td>
+
     <td><img src="images/spacer.gif" width="61" height="1" border="0" alt=""></td>
+
     <td><img src="images/spacer.gif" width="45" height="1" border="0" alt=""></td>
+
     <td><img src="images/spacer.gif" width="12" height="1" border="0" alt=""></td>
+
   </tr>
+
   <tr> 
-    <td width="50%" rowspan="4" align="left" valign="top" background="images/f_so_f_r1_c1.jpg"><a name="topofpage"></a></td>
-    <td rowspan="4"><img name="f_so_f_r1_c2" src="images/pagehead_r1_c1.jpg" width="71" height="167" border="0" alt=""></td>
-    <td height="16" colspan="4"><img name="f_so_f_r1_c3" src="images/f_so_f_r1_c3.jpg" width="477" height="16" border="0" alt=""></td>
+
+    <td width="50%" rowspan="4" align="left" valign="top" background="images/f_so_f_r1_c1.jpg"><a name="toppage"></a></td>
+
+    <td rowspan="4"><img name="f_so_f_r1_c2" src="images/f_so_f_r1_c2.jpg" width="71" height="167" border="0" alt=""></td>
+
+    <td colspan="4"><img name="f_so_f_r1_c3" src="images/f_so_f_r1_c3.jpg" width="477" height="16" border="0" alt=""></td>
+
     <td colspan="3"><img name="f_so_f_r1_c7" src="images/f_so_f_r1_c7.jpg" width="173" height="16" border="0" alt=""></td>
+
     <td width="50%" rowspan="4" align="left" background="images/f_so_f_r1_c10.jpg">&nbsp;</td>
+
   </tr>
+
   <tr> 
-    <td height="12" colspan="3"><img name="f_so_f_r2_c3" src="images/f_so_f_r2_c3.jpg" width="404" height="12" border="0" alt=""></td>
+
+    <td colspan="3"><img name="f_so_f_r2_c3" src="images/f_so_f_r2_c3.jpg" width="404" height="12" border="0" alt=""></td>
+
     <td rowspan="3"><img name="f_so_f_r2_c6" src="images/f_so_f_r2_c6.jpg" width="73" height="151" border="0" alt=""></td>
+
     <td rowspan="3"><img name="f_so_f_r2_c7" src="images/f_so_f_r2_c7.jpg" width="67" height="151" border="0" alt=""></td>
+
     <td rowspan="3"><img name="f_so_f_r2_c8" src="images/f_so_f_r2_c8.jpg" width="61" height="151" border="0" alt=""></td>
+
     <td rowspan="3"><img name="f_so_f_r2_c9" src="images/f_so_f_r2_c9.jpg" width="45" height="151" border="0" alt=""></td>
+
   </tr>
+
   <tr> 
-    <td height="47" colspan="2"><img name="f_so_f_r3_c3" src="images/pagehead_r3_c2.jpg" width="208" height="47" border="0" alt=""></td>
+
+    <td colspan="2"><img name="f_so_f_r3_c3" src="images/f_so_f_r3_c3.jpg" width="208" height="47" border="0" alt=""></td>
+
     <td><img name="f_so_f_r3_c5" src="images/f_so_f_r3_c5.jpg" width="196" height="47" border="0" alt=""></td>
+
   </tr>
+
   <tr> 
-    <td height="92" colspan="2"><img name="f_so_f_r4_c3" src="images/pagehead_r4_c2.jpg" width="208" height="92" border="0" alt=""></td>
+
+    <td colspan="2"><img name="f_so_f_r4_c3" src="images/f_so_f_r4_c3.jpg" width="208" height="92" border="0" alt=""></td>
+
     <td><img name="f_so_f_r4_c5" src="images/f_so_f_r4_c5.jpg" width="196" height="92" border="0" alt=""></td>
+
   </tr>
+
   <tr> 
-    <td width="50%" rowspan="4" align="left" valign="top">&nbsp;</td>
-    <td height="45" colspan="2" align="center" valign="top" background="images/nav_backing.jpg"><img name="f_so_f_r5_c2" src="images/f_so_f_r5_c2.jpg" width="200" height="45" border="0" alt=""></td>
-    <td colspan="6" rowspan="3" align="center" valign="top"><table bgcolor="#b0ffb0" border="0" cellpadding="0" cellspacing="0">
+
+    <td width="50%" rowspan="5" align="left" valign="top">&nbsp;</td>
+
+    <td colspan="2" align="center" valign="top" background="images/nav_backing.jpg"><img name="f_so_f_r5_c2" src="images/f_so_f_r5_c2.jpg" width="200" height="45" border="0" alt=""></td>
+
+    <td colspan="6" rowspan="4" align="center" valign="top"><table bgcolor="#b0ffb0" border="0" cellpadding="0" cellspacing="0">
+
         <!-- fwtable fwsrc="FINALHOME2.png" fwbase="body.jpg" fwstyle="Dreamweaver" fwdocid = "742308039" fwnested="0" -->
+
         <tbody><tr> 
+
           <td><img src="images/spacer.gif" width="76" height="1" border="0" alt=""></td>
+
           <td><img src="images/spacer.gif" width="196" height="1" border="0" alt=""></td>
+
           <td><img src="images/spacer.gif" width="73" height="1" border="0" alt=""></td>
+
           <td><img src="images/spacer.gif" width="67" height="1" border="0" alt=""></td>
+
           <td><img src="images/spacer.gif" width="61" height="1" border="0" alt=""></td>
+
           <td><img src="images/spacer.gif" width="45" height="1" border="0" alt=""></td>
+
         </tr>
+
         <tr> 
+
           <td colspan="6"><img name="body_r1_c1" src="images/body_r1_c1.jpg" width="518" height="27" border="0" alt=""></td>
+
         </tr>
+
         <tr align="center" valign="top"> 
-          <td colspan="6" background="images/body_r2_c1.jpg"><table width="100%" height="100%" align="center" cellpadding="15">
+
+          <td colspan="6" background="images/body_r2_c1.jpg"><table width="98%" align="center" cellpadding="15">
+
               <tbody><tr> <!-- InstanceBeginEditable name="BodyArea" --> 
                 <td height="626" align="left" valign="top" class="navtxt"><p class="HeadingLarge">Privacy
                     Policy...</p>
@@ -160,55 +232,83 @@
                   <p class="HeadingLeft">&nbsp; 
                   </p></td>
                 <!-- InstanceEndEditable --></tr>
+
             </tbody></table></td>
+
         </tr>
+
         <tr> 
+
           <td colspan="6"><img name="body_r10_c1" src="images/body_r10_c1.jpg" width="518" height="74" border="0" alt=""></td>
+
         </tr>
+
       </tbody></table>
-      <br> </td>
-    <td width="50%" rowspan="4" align="left">&nbsp;</td>
+
+      <br>
+      <span class="bodyboldcen"> <a href="#toppage">TOP OF PAGE</a></span></td>
+
+    <td width="50%" rowspan="5" align="left">&nbsp;</td>
+
   </tr>
+
   <tr> 
-    <td colspan="2" align="center" valign="top" background="images/nav_backing.jpg"><p><span class="navtxt"><a href="index.htm">Home
-            Page<br>
-      </a></span><span class="navtxt"><a href="about_us.htm">What we do</a><br>
-      <a href="ordering.htm">Ordering</a><br>
-    <a href="find_us.htm">How to find us</a></span></p>
-      <hr width="100">
-      <p><span class="navtxt"><a href="aviaries.htm">Aviaries</a><br>
-            <a href="bird_tables.htm">Bird Tables</a><br>
-            <a href="bird_boxes_feeders.htm">Bird Boxes/Feeders<br>
-            </a><a href="coops_arks.htm">Coops &amp; Arks<br>
-            </a><a href="dovecotes.htm">Dovecotes</a><br>
-            <a href="duck_houses.htm">Duck Houses</a><br>
-            <a href="hen_houses.htm">Hen Houses</a><br>
-            <a href="hutches.htm">Hutches</a><br>
-          <a href="kennel_petvillas.htm"> Pet Villas &amp; Kennels</a> </span></p>
-      <hr width="100">
-      <p><span class="navtxt"><a href="terms_conditions.htm">Terms &amp; Conditions</a><br>
-          <a href="privacy_policy.htm">Privacy Policy</a></span> </p>
-      <hr width="100">
-      <span class="navtxt"><a href="privacy_policy.htm"><br>
-      </a></span><span class="addretxt">Flyte So Fancy<br>
-The Cottage<br>
-Pulham, Dorchester<br>
-Dorset, DT2 7DX<br>
-United Kingdom<br>
-<br>
-Email:<br>
-<a href="mailto:info@flytesofancy.co.uk">info@FlyteSoFancy.co.uk</a><br>
-<br>
-Telephone &amp; Fax:<br>
-01300 345229</span></td>
+    <td colspan="2" align="center" valign="top" background="images/nav_backing.jpg"><p align="center"><span class="navtxt"><a href="index.htm">Home</a><br>
+        </span><span class="navtxt"><a href="about_us.htm">What we do</a><br>
+        <a href="ordering.htm">Ordering</a><br>
+        <a href="find_us.htm">How to find us</a></span></p>
+      <hr align="center" width="80"> <div align="center"><span class="navtxt"> 
+        <a href="aviaries.htm">Aviaries</a><br>
+        <a href="bird_tables.htm">Bird Tables</a><br>
+        <a href="bird_boxes_feeders.htm">Bird Boxes/Feeders<br>
+        </a><a href="coops_arks.htm">Coops &amp; Arks<br>
+        </a><a href="dovecotes.htm">Dovecotes</a><br>
+        <a href="duck_houses.htm">Duck Houses</a><br>
+        <a href="hen_houses.htm">Hen Houses</a><br>
+        <a href="hutches.htm">Hutches</a><br>
+        <a href="kennel_petvillas.htm">Kennels</a><br>
+        </span> </div>
+      <hr align="center" width="100"> <div align="center"><span class="navtxt"> 
+        <a href="terms_conditions.htm">Terms &amp; Conditions</a><br>
+        <a href="privacy_policy.htm">Privacy Policy</a> <br>
+        </span> </div>
+      <hr align="center" width="100"> <div align="center"><span class="addretxt">Flyte 
+        So Fancy<br>
+        The Cottage<br>
+        Pulham, Dorchester<br>
+        Dorset, DT2 7DX<br>
+        United Kingdom<br>
+        <br>
+        Email:<br>
+        <a href="mailto:info@flytesofancy.co.uk" class="addretxt">info@FlyteSoFancy.co.uk</a><br>
+        <br>
+        Telephone &amp; Fax:<br>
+        01300 345229</span></div></td>
+
   </tr>
+
+  <tr>
+
+    <td colspan="2" align="center" valign="top" background="images/nav_backing.jpg">&nbsp;</td>
+
+  </tr>
+
   <tr> 
-    <td height="142" colspan="2" align="center" valign="top"><img name="f_so_f_r9_c2" src="images/f_so_f_r9_c2.jpg" width="200" height="82" border="0" alt=""></td>
+
+    <td colspan="2" align="center" valign="top"><img name="f_so_f_r9_c2" src="images/f_so_f_r9_c2.jpg" width="200" height="82" border="0" alt=""></td>
+
   </tr>
+
   <tr> 
-    <td height="38" colspan="8">&nbsp;</td>
+
+    <td colspan="8">&nbsp;</td>
+
   </tr>
+
 </tbody></table>
 
+
+
 <!-- InstanceEnd -->
+
 </body></html>
