--- a/t/th/the/thedieselstop.com.html
+++ b/t/th/the/thedieselstop.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thedieselstop.com privacy policy that was archived on 2004-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040613181550id_/http%3A//www.thedieselstop.com/about/privacy.php3) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thedieselstop.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207030954id_/http%3A//www.thedieselstop.com/about/privacy.php3) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>TheDieselStop.Com - www.thedieselstop.com</title>
 <meta name="description" content="Complete source of information for all Ford Diesel owners.">
@@ -11,7 +11,7 @@
 
 <!-- Begin banner ad code -->
 
-<center><a href="http://ads.thedieselstop.com/adcycle1.17/adclick.cgi?manager=adcycle.com&amp;gid=4&amp;id=625805" target="_blank"><img src="http://ads.thedieselstop.com/adcycle1.17/adcycle.cgi?gid=4&amp;id=625805" width="468" height="60" border="1" alt="Click to Visit"></a></center><br>
+<center><a href="http://ads.thedieselstop.com/adcycle1.17/adclick.cgi?manager=adcycle.com&amp;gid=4&amp;id=620549" target="_blank"><img src="http://ads.thedieselstop.com/adcycle1.17/adcycle.cgi?gid=4&amp;id=620549" width="468" height="60" border="1" alt="Click to Visit"></a></center><br>
 
 <!-- End banner ad code -->
 
@@ -200,7 +200,7 @@ TheDieselStop.Com is a source of information, discussion, and help pertaining to
               <tbody><tr>
                 <td>
 
-<center><a href="http://photos.thedieselstop.com/showphoto.php?photo=11634"><img src="http://photos.thedieselstop.com/data/500/10874Picture_for_sig-thumb.jpg" border="0" alt="Random Image"><br>Click to Enlarge</a></center>                </td>
+<center><a href="http://photos.thedieselstop.com/showphoto.php?photo=21189"><img src="http://photos.thedieselstop.com/data/500/30026IMG_0863-thumb.JPG" border="0" alt="Random Image"><br>Click to Enlarge</a></center>                </td>
               </tr>
             </tbody></table>
 
@@ -242,7 +242,7 @@ TheDieselStop.Com is a source of information, discussion, and help pertaining to
       <table width="100%" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr>
           <td>
-            <font size="2"><b><a href="/contents/getitems.php3?Ceramic%20Coating">Ceramic Coating</a> by Clive Buttrey</b><br>Clive Buttrey (cbuttre835) explains do-it-yourself ceramic coating on his 1997 Power Stroke.</font><p><font size="2"><b><a href="/contents/getitems.php3?Proper%20Tire%20Inflation">Proper Tire Inflation</a> by Dave Rais</b><br>Dave Rais (Homegrown) explains how to properly inflate your tires.</font></p><p><font size="2"><b><a href="/contents/getitems.php3?Part%2013%20-%20Braking%20Upgrades">Part 13 - Braking Upgrades</a> by JLester</b><br>Installation of rotors and pads from Performance Friction.</font></p><p><font size="2"><b><a href="/contents/getitems.php3?Injector%20Breakout%20Box">Injector Breakout Box</a> by Kevin Hansen</b><br>Kevin Hansen (klhansen) builds us an Injector Breakout Box for a 7.3L Super Duty.</font></p><p><font size="2"><b><a href="/contents/getitems.php3?Injector%20Breakout%20Box%20Mods">Injector Breakout Box Mods</a> by Kevin Hansen</b><br>Kevin Hansen (klhansen) modifies his Injector Breakout box to access engine control functions.</font></p><p></p><p></p><center><a href="/contents/index.php3">More Articles</a></center>          </td>
+            <font size="2"><b><a href="/contents/getitems.php3?1999-2004%20%2410%2F%2415%20AIC">1999-2004 $10/$15 AIC</a> by Rob Milnes</b><br>Rob Milnes walks us through building and installing a $10-15 AIC on a late-model Power Stroke.</font><p><font size="2"><b><a href="/contents/getitems.php3?Ceramic%20Coating">Ceramic Coating</a> by Clive Buttrey</b><br>Clive Buttrey (cbuttre835) explains do-it-yourself ceramic coating on his 1997 Power Stroke.</font></p><p><font size="2"><b><a href="/contents/getitems.php3?Proper%20Tire%20Inflation">Proper Tire Inflation</a> by Dave Rais</b><br>Dave Rais (Homegrown) explains how to properly inflate your tires.</font></p><p><font size="2"><b><a href="/contents/getitems.php3?Part%2013%20-%20Braking%20Upgrades">Part 13 - Braking Upgrades</a> by JLester</b><br>Installation of rotors and pads from Performance Friction.</font></p><p><font size="2"><b><a href="/contents/getitems.php3?Injector%20Breakout%20Box">Injector Breakout Box</a> by Kevin Hansen</b><br>Kevin Hansen (klhansen) builds us an Injector Breakout Box for a 7.3L Super Duty.</font></p><p></p><p></p><center><a href="/contents/index.php3">More Articles</a></center>          </td>
         </tr>
       </tbody></table>
     </td>
@@ -265,7 +265,7 @@ TheDieselStop.Com is a source of information, discussion, and help pertaining to
   <tbody><tr>
     <td>
       <center>
-        <br><br><a href="/counter/index.php3">This page has been accessed 15,281 times.</a>        <hr>
+        <br><br><a href="/counter/index.php3">This page has been accessed 16,561 times.</a>        <hr>
        <font size="1">
         All trademarks and copyrights on this
         page are owned by their respective companies.<br>
