--- a/r/rh/rhb/rhbbank.com.my.html
+++ b/r/rh/rhb/rhbbank.com.my.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rhbbank.com.my privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602205534id_/http%3A//rhbbank.com.my/generalinfo/privacy.shtm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rhbbank.com.my privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207031728id_/http%3A//www.rhbbank.com.my/generalinfo/privacy.shtm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- #BeginTemplate "/Templates/template01.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> <!-- #BeginEditable "doctitle" --> 
@@ -94,21 +94,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       More</a></td>
   </tr>
   <tr> 
-    <td width="127" bgcolor="#DADADA" height="8"></td>
-  </tr>
-  <tr> 
-    <td width="127" bgcolor="#DADADA" height="21"><img src="/images/bullet.gif" height="12" width="12" hspace="1" align="absmiddle"><span class="unnamed2">Business 
-      Banking</span></td>
-  </tr>
-  <tr> 
-    <td width="127" bgcolor="#DADADA" height="21"><img src="/images/transparent.gif" width="12" height="12"><a href="javascript:;" onclick="MM_openBrWindow('https://logon.ehr.rhbbank.com.my','BSignon','status=yes,scrollbars=yes,resizable=yes')">SignOn</a></td>
-  </tr>
-  <tr> 
-    <td width="127" bgcolor="#DADADA" height="21"><img src="/images/transparent.gif" width="12" height="12"><a href="/ehr/apply.shtm">Apply</a></td>
-  </tr>
-  <tr> 
-    <td width="127" bgcolor="#DADADA" height="21"><img src="/images/transparent.gif" width="12" height="12"><a href="/ehr/faq/index.shtm">Learn 
-      More</a></td>
+    <td width="127" bgcolor="#DADADA" height="21"><img src="/images/bullet.gif" height="12" width="12" hspace="1" align="absmiddle"><span class="unnamed2"><a href="/business/index.shtm"><font color="#FF6600">Business 
+      Banking</font></a></span></td>
   </tr>
   <tr> 
     <td width="127" bgcolor="#DADADA" height="10" align="center"><img height="2" src="/images/lines.gif" width="120"></td>
@@ -126,13 +113,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       Banking</a></td>
   </tr>
   <tr> 
-    <td width="127" bgcolor="#DADADA" height="21">&nbsp;<a href="/business/index.shtm">Enterprise 
-      Banking</a></td>
-  </tr>
-  <tr> 
     <td width="127" bgcolor="#DADADA" height="21"> &nbsp;<a href="/treasury/index.shtm">Treasury</a></td>
   </tr>
-  <tr>
+  <tr> 
     <td width="127" bgcolor="#DADADA" height="5" align="center"></td>
   </tr>
   <tr> 
@@ -305,22 +288,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               on customer information or services, please contact us via post 
               or facsimile transmission to us at the following address:</p>
             <p align="center">RHB Bank Berhad (6171-M)<br>
-              Internet Banking Section<br>
-              Direct Service Department<br>
-              Level 6, Menara AA<br>
-              Jalan Tun Razak<br>
+              Technology Banking Division<br>
+              Level 8, Tower 2, RHB Centre,<br>
               50400 Kuala Lumpur<br>
               Malaysia<br>
-              Facsimile number : +60-3-2143 5552<br>
+              Facsimile number : +60-3-9280 6194<br>
               email: <font color="#FF0000"><a href="mailto:ibanksupport@rhbbank.com.my">ibanksupport@rhbbank.com.my</a>&nbsp;</font></p>
             <p>&nbsp;</p>
-            <p> 
-            </p><p> 
-              <!--end of contents -->
-            </p>
-            <p> 
-              <!--end of contents -->
-            </p>
             <p align="center"> 
               <!--start of copyright -->
             </p>
@@ -336,14 +310,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     </td>
   </tr>
 </tbody></table>
-
-<script language="JavaScript">
-<!--
-function MM_openBrWindow(theURL,winName,features) { //v2.0
-  window.open(theURL,winName,features);
-}
-//-->
-</script>
 <table width="780" border="0" cellspacing="0" cellpadding="0" height="25" bgcolor="#ADA990">
   <tbody><tr>
     <td width="780" height="25" valign="middle" align="center">
@@ -353,7 +319,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         | </font> <a title="About Us" target="_parent" href="/generalinfo/about_us.shtm"><span style="FONT-WEIGHT: 400"><font color="#ffffff">About Us</font></span></a><font color="#ffffff"> 
         |&nbsp; </font> <a title="Terms &amp; Conditions" target="_parent" href="/generalinfo/terms.shtm"><span style="FONT-WEIGHT: 400"><font color="#ffffff">Terms &amp; Conditions</font></span></a><font color="#ffffff"> 
         | </font> <a title="Privacy" target="_parent" href="/generalinfo/privacy.shtm"><span style="FONT-WEIGHT: 400"><font color="#ffffff">Privacy</font></span></a><font color="#ffffff"> 
-        | </font> <a href="/generalinfo/sitemap.shtm"><span style="FONT-WEIGHT: 400"><font color="#ffffff">Site Map</font></span></a><font color="#ffffff"> 
+        | </font> <a href="/generalinfo/sitemap_personal.shtm"><span style="FONT-WEIGHT: 400"><font color="#ffffff">Site Map</font></span></a><font color="#ffffff"> 
         | </font><a href="/3rd/external.shtm"><span style="FONT-WEIGHT: 400"><font color="#ffffff">External Links</font></span></a> <font color="#ffffff"> | </font><span style="FONT-WEIGHT: 400"><a href="/branchlocator/main.asp" target="_blank"><font color="#FFFFFF">Branch/ATM/BdC 
         Locator</font></a></span></p>
     </td>
