--- a/e/ep/eps/epsbooks.com.html
+++ b/e/ep/eps/epsbooks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the epsbooks.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606042003id_/http%3A//www.epsbooks.com/dynamic/customer_service/privacy/index.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the epsbooks.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207040033id_/http%3A//www.epsbooks.com/dynamic/customer_service/privacy/index.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/Customer Service.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -544,10 +544,10 @@ function MM_preloadImages() { //v3.0
 <table border="0" cellpadding="0" cellspacing="0" width="156">
 <!-- fwtable fwsrc="tools.png" fwbase="tools.gif" fwstyle="Dreamweaver" fwdocid = "742308039" fwnested="0" -->
 
-<tbody><tr><td><a href="/dynamic/customer_service/index.asp" onmouseout="MM_nbGroup('out');" onmouseover="MM_displayStatusMsg('customer service');MM_nbGroup('over','customer_service','/images/navigation/tools/customer_service_down.gif','/images/navigation/tools/customer_service_down.gif',1);return document.MM_returnValue" onclick="MM_nbGroup('down','navbar1','customer_service','/images/navigation/tools/customer_service_down.gif',1);"><img name="customer_service" src="/images/navigation/tools/customer_service_down.gif" width="156" height="20" border="0" alt="customer service"></a></td></tr>
+<tbody><tr><td><a href="/dynamic/customer_service/" onmouseout="MM_nbGroup('out');" onmouseover="MM_displayStatusMsg('customer service');MM_nbGroup('over','customer_service','/images/navigation/tools/customer_service_down.gif','/images/navigation/tools/customer_service_down.gif',1);return document.MM_returnValue" onclick="MM_nbGroup('down','navbar1','customer_service','/images/navigation/tools/customer_service_down.gif',1);"><img name="customer_service" src="/images/navigation/tools/customer_service_down.gif" width="156" height="20" border="0" alt="customer service"></a></td></tr>
 <tr><td><a href="/dynamic/catalogsite/code/epsshopcart.cfm" onmouseout="MM_nbGroup('out');" onmouseover="MM_displayStatusMsg('view shopping cart');MM_nbGroup('over','view_shopping_cart','/images/navigation/tools/view_shopping_cart_over.gif','/images/navigation/tools/view_shopping_cart_down.gif',1);return document.MM_returnValue" onclick="MM_nbGroup('down','navbar1','view_shopping_cart','/images/navigation/tools/view_shopping_cart_down.gif',1);"><img name="view_shopping_cart" src="/images/navigation/tools/view_shopping_cart.gif" width="156" height="20" border="0" alt="view shopping cart"></a></td></tr>
-<tr><td><a href="/dynamic/customer_service/request_a_catalog/index.asp" onmouseout="MM_nbGroup('out');" onmouseover="MM_displayStatusMsg('request a catalog');MM_nbGroup('over','request_a_catalog','/images/navigation/tools/request_a_catalog_over.gif','/images/navigation/tools/request_a_catalog_down.gif',1);return document.MM_returnValue" onclick="MM_nbGroup('down','navbar1','request_a_catalog','/images/navigation/tools/request_a_catalog_down.gif',1);"><img name="request_a_catalog" src="/images/navigation/tools/request_a_catalog.gif" width="156" height="20" border="0" alt="request a catalog"></a></td></tr>
-<tr><td><a href="/dynamic/district_sales_reps/index.asp" onmouseout="MM_nbGroup('out');" onmouseover="MM_displayStatusMsg('district sales reps');MM_nbGroup('over','district_sales_reps','/images/navigation/tools/district_sales_reps_over.gif','/images/navigation/tools/district_sales_reps_down.gif',1);return document.MM_returnValue" onclick="MM_nbGroup('down','navbar1','district_sales_reps','/images/navigation/tools/district_sales_reps_down.gif',1);"><img name="district_sales_reps" src="/images/navigation/tools/district_sales_reps.gif" width="156" height="20" border="0" alt="district sales reps"></a></td></tr>
+<tr><td><a href="/dynamic/customer_service/request_a_catalog/" onmouseout="MM_nbGroup('out');" onmouseover="MM_displayStatusMsg('request a catalog');MM_nbGroup('over','request_a_catalog','/images/navigation/tools/request_a_catalog_over.gif','/images/navigation/tools/request_a_catalog_down.gif',1);return document.MM_returnValue" onclick="MM_nbGroup('down','navbar1','request_a_catalog','/images/navigation/tools/request_a_catalog_down.gif',1);"><img name="request_a_catalog" src="/images/navigation/tools/request_a_catalog.gif" width="156" height="20" border="0" alt="request a catalog"></a></td></tr>
+<tr><td><a href="/dynamic/contact_sales_reps" onmouseout="MM_nbGroup('out');" onmouseover="MM_displayStatusMsg('contact sales reps');MM_nbGroup('over','contact_sales_reps','/images/navigation/tools/contact_sales_reps_over.gif','/images/navigation/tools/contact_sales_reps_down.gif',1);return document.MM_returnValue" onclick="MM_nbGroup('down','navbar1','contact_sales_reps','/images/navigation/tools/contact_sales_reps_down.gif',1);"><img name="contact_sales_reps" src="/images/navigation/tools/contact_sales_reps.gif" width="156" height="20" border="0" alt="contact sales reps"></a></td></tr>
 
 </tbody></table>
 </td></tr>
@@ -702,7 +702,7 @@ Our site's order form requires users to give us contact information (such
             </span> </p>
         <ol>
                     <li class="body-text">You
-                        can send e-mail to <a href="mailto:epsbooks@epsbooks.com" class="body-text-link"> epsbooks@epsbooks.com</a>.</li>
+                        can send e-mail to <a href="mailto:feedback@epsbooks.com" class="body-text-link"> feedback@epsbooks.com</a>.</li>
                     <li class="body-text">You
                           can call the following telephone number: 800.225.5750
                         (toll-free).</li>
@@ -827,10 +827,18 @@ function MM_displayStatusMsg(msgStr) { //v1.0
 </tbody></table>
 <table border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td width="15"><img src="/images/spacer.gif" alt=" " width="15" height="15"></td>
-    <td valign="top" class="footer-text"><b>© 1997–2004
+    <td colspan="4"><img src="/images/spacer.gif" alt=" " width="5" height="5"></td>
+  </tr>
+  <tr>
+    <td><img src="/images/spacer.gif" alt=" " width="10" height="5"></td>
+    <td><img src="/images/elements/logo_footer.jpg" width="50" height="16"></td>
+    <td><img src="/images/spacer.gif" alt=" " width="10" height="5"></td>
+    <td class="footer-text"><b>© 1997–2004
         Educators Publishing Service</b> &nbsp;|&nbsp; 800.225.5750 &nbsp;|&nbsp; Read our <a href="/dynamic/customer_service/privacy/index.asp" class="footer-link" onmouseover="MM_displayStatusMsg('Privacy Policy');return document.MM_returnValue">Privacy
         Policy</a></td>
+  </tr>
+  <tr>
+    <td colspan="4"><img src="/images/spacer.gif" alt=" " width="10" height="10"></td>
   </tr>
 </tbody></table>
 
