--- a/s/sa/sap/sapphicerotica.com.html
+++ b/s/sa/sap/sapphicerotica.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sapphicerotica.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605165240id_/http%3A//www.sapphicerotica.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sapphicerotica.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207042147id_/http%3A//www.sapphicerotica.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head><title>SAPPHIC EROTICA - Customer Support</title>
 <meta name="description" content="Sapphic Erotica, links to friends' sites with good solo and lesbian content.">
@@ -34,11 +34,11 @@ INPUT {
 <tbody><tr><td colspan="9"><img src="images/main2_01.jpg" width="800" height="8"></td></tr>
 <tr><td colspan="5"><img src="images/main2_02.jpg" width="355" height="63"></td>
 <td colspan="4" width="445" height="63">&nbsp;</td></tr>
-<tr><td><a href="members/index.html" onmouseover="window.status='MEMBERS AREA'; changeImages('main2_04', 'images/main2_04-over.jpg'); return true;" onmouseout="window.status=''; changeImages('main2_04', 'images/main2_04.jpg'); return true;">
+<tr><td><a href="http://members.sapphicerotica.com/members/index.html" onmouseover="window.status='MEMBERS AREA'; changeImages('main2_04', 'images/main2_04-over.jpg'); return true;" onmouseout="window.status=''; changeImages('main2_04', 'images/main2_04.jpg'); return true;">
 <img name="main2_04" src="images/main2_04.jpg" width="109" height="36" border="0" alt="MEMBERS AREA"></a></td>
 <td colspan="2"><a href="main.html" onmouseover="window.status='SAPPHIC EROTICA PREVIEW'; changeImages('preview_middle', 'images/preview_middle_over.jpg'); return true;" onmouseout="window.status=''; changeImages('preview_middle', 'images/preview_middle.jpg'); return true;">
 <img name="preview_middle" src="images/preview_middle.jpg" width="104" height="36" border="0" alt="SAPPHIC EROTICA PREVIEW"></a></td>
-<td><a href="join.html" onmouseover="window.status='JOIN NOW'; changeImages('join_06', 'images/join_06-over.jpg'); return true;" onmouseout="window.status=''; changeImages('join_06', 'images/join_06.jpg'); return true;">
+<td><a href="join.php" onmouseover="window.status='JOIN NOW'; changeImages('join_06', 'images/join_06-over.jpg'); return true;" onmouseout="window.status=''; changeImages('join_06', 'images/join_06.jpg'); return true;">
 <img name="join_06" src="images/join_06.jpg" width="107" height="36" border="0" alt="JOIN NOW"></a></td>
 <td colspan="5"><img src="images/main2_07.jpg" width="480" height="36"></td></tr>
 <tr></tr>
