--- a/o/on/ons/onsemi.com.html
+++ b/o/on/ons/onsemi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the onsemi.com privacy policy that was archived on 2004-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040608213306id_/http%3A//www.onsemi.com/site/content/0%2C4367%2C1109%2C00.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the onsemi.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207044108id_/http%3A//www.onsemi.com/site/content/0%2C4367%2C1109%2C00.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>ON Semiconductor</title>
@@ -259,7 +259,7 @@ function invokeXrefSubmit(form) {
                 <td width="16" align="left" background="/site/images/cartrep.jpg"><img src="/site/images/cartstart.jpg" width="16" height="20" align="absbottom"></td>
                 <td width="26" align="left" background="/site/images/cartrep.jpg" valign="top"><img src="/site/images/cart.jpg" width="26" height="20"></td>
 				<td valign="middle" nowrap="" background="/site/images/cartrep.jpg"><span class="cartStatus">
-				<img src="/site/images/spacer.gif" width="8" height="8"><a href="/site/shoppingCart/0,4993,,00.html" target="_parent">Cart Status</a></span>:&nbsp;</td>
+				<img src="/site/images/spacer.gif" width="8" height="8"><a href="/site/shoppingCart/0,4993,1109,00.html" target="_parent">Cart Status</a></span>:&nbsp;</td>
                 
 				
 				<td width="500" valign="middle" background="/site/images/cartrep.jpg"> <span class="cartQuanity">&nbsp;<cartsize>empty</cartsize></span></td>
@@ -294,38 +294,6 @@ function invokeXrefSubmit(form) {
 
 
 
-
-
-
-
-
-
-
-
-<!-- httpHost: www.onsemi.com-->
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- httpHost: www.onsemi.com-->
-
-
-
-
-
-
 <table width="100%" height="22" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr><td colspan="3" bgcolor="#A5BCD4" height="10"><img src="/site/images/spacer.gif"></td>
 </tr><tr> 
@@ -354,21 +322,14 @@ function invokeXrefSubmit(form) {
 <td height="2" background="/site/images/crumb_left_rep.jpg"><img src="/site/images/spacer.gif" width="615" height="2"></td>
 <td height="2" background="/site/images/crumb_right_rep.jpg"><img src="/site/images/spacer.gif" width="140" height="2"></td>
 </tr>
-<tr>
-<td colspan="3"><img src="/site/images/spacer.gif" width="1" height="10"></td>
-</tr>
 </tbody></table>
 
 
 <table width="100%" cellpadding="0" cellspacing="0" border="0" class="bodyCopy">
 <tbody><tr>
 
-<td width="20">&nbsp;</td>
-<td valign="top" width="*">
+	<td valign="top" width="*">
 	
-
-
-
 <table width="720" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr> 
     <td><p align="left" class="lgHeadline"><b>Privacy Policy </b></p>
@@ -431,24 +392,10 @@ function invokeXrefSubmit(form) {
         For more information on using this site, see the Terms of Use.</p></td>
   </tr>
 </tbody></table>
-</td>
+	</td>
 </tr>
 </tbody></table>
 
-<!-- Vignette V6 Mon May 03 05:19:00 2004 -->
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- httpHost: onfive.onsemi.com-->
 
 
 
@@ -465,6 +412,12 @@ function invokeXrefSubmit(form) {
   </tr>
 </tbody></table>
 <br><br>
+<!--ic live tracking code-->
+<script type="text/javascript" src="/site/common/iclive.js">
+</script><img src="https://www.ic-live.com/goat.php?cID=1131&amp;cdid=2613&amp;campID=8&amp;refVar=" height="1" width="1">
+<noscript>
+<img src="//www.ic-live.com/goat.php?cID=1131&cdid=2613&campID=8&nojs">
+</noscript>
 
 
 </body></html>
